--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="delete">#D32F2F</color>
+    <color name="delete_background">#D32F2F</color>
+    <color name="delete_icon">@android:color/white</color>
 </resources>
